refactor: file structure

--- a/content/index.mdx
+++ b/content/index.mdx
@@ -1,26 +1,11 @@
 ---
-title: Phuc Bui (or Felix)
+title: Hung Van (or Paul)
 ---
 
 ## At the moment
+Doing creative things...
 
-Building tools and taking on projects.<br/>
-I create things for designers and developers, usually open source.
-
-I love bringing design concepts to life through interactive websites. It's incredibly rewarding when people discover and find value in the tools I create.
-
-Previously led the frontend team at [ViiVue](https://viivue.com/)
-
-<div className="h-6"/>
-
-## Projects
-
-
-<div className="h-6"/>
 
 ## Works
 
 Companies I've worked with professionally
-
-
-*_Full portfolio available upon request_
