feat(scrolling-sections): add new registry

--- a/content/my-work/scrolling-sections.mdx
+++ b/content/my-work/scrolling-sections.mdx
@@ -8,12 +8,14 @@ containerHeight: "400"
 
 # Scrolling Sections
 
-<RegistryDemo name="scrolling-sections" height={500}/>
+<div className="container">
+     <RegistryDemo name="scrolling-sections" height={500}/>
 
-## Installation
+     ## Installation
 
-<RegistryInstall name="scrolling-sections"/>
+     <RegistryInstall name="scrolling-sections"/>
 
-## Props
+     ## Props
 
-<RegistryPropsTable name="scrolling-sections"/>
+     <RegistryPropsTable name="scrolling-sections"/>
+</div>
